--- a/app/src/main/res/layout/fragment_saves.xml
+++ b/app/src/main/res/layout/fragment_saves.xml
@@ -23,7 +23,7 @@
         android:layout_alignParentTop="true"
         android:layout_marginBottom="5dp"
         android:fontFamily="serif"
-        android:text="Goals"
+        android:text="Saves"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="#000000"
         android:textSize="25sp" />
@@ -46,6 +46,7 @@
         android:layout_toEndOf="@+id/textView"
         android:layout_toRightOf="@+id/textView"
         android:src="@drawable/blackforward" />
+
 
 
 
