--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,10 +4,18 @@
     tools:showIn="navigation_view">
 
     <group android:checkableBehavior="single">
+
+
+        <item
+            android:id="@+id/Home"
+            android:icon="@drawable/home"
+            android:title="Home" />
+
         <item
             android:id="@+id/Goals"
-            android:icon="@drawable/fbicon"
+            android:icon="@drawable/footballicon"
             android:title="Goals" />
+
         <item
             android:id="@+id/Saves"
             android:icon="@drawable/saves"
@@ -22,7 +30,7 @@
             android:title="Lineout" />
         <item
             android:id="@+id/Shots_Blocked"
-            android:icon="@drawable/goals"
+            android:icon="@drawable/footballicon"
             android:title="Shots Blocked" />
         <item
             android:id="@+id/Interceptions"
